--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<router-outlet></router-outlet>
+<app-sidebar [(isPhone)]="isPhone"></app-sidebar>
+<app-route-table [isPhone]="isPhone"></app-route-table>
