fefactor: added signals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-sidebar [(isPhone)]="isPhone"></app-sidebar>
+<app-sidebar [isPhone]="isPhone"></app-sidebar>
 <app-route-table [isPhone]="isPhone"></app-route-table>
